[Extensions Click-to-Script] Adjust icon grayscaling behavior

Currently, extension icons in the toolbar are grayscaled when the
extension action (i.e., the page action or the browser action) is
disabled. However, this can be confusing, because it makes the extension
look disabled when it might be running on that page.

With runtime host permissions enabled, the extension icon should only be
grayscaled in the toolbar only if the action is currently disabled *and*
the extension cannot currently inject on the page. This addresses the
confusing "disabled" look, as well as preventing the strange case of
"clicking on the extension icon and it immediately becoming disabled."

Bug: 866170

Change-Id: I00c239c6b4a35f52398e433d0a6ed357298e08c6
Reviewed-on: https://chromium-review.googlesource.com/1145630
Commit-Queue: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Karan Bhatia <karandeepb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577235}
Former-commit-id: 516528f82e9ac80731371e1e117f01223034a1ba