chrome/browser/ui/extensions/extension_action_view_controller.h
@@ -97,6 +97,21 @@ class ExtensionActionViewController
   // ExtensionHostObserver:
   void OnExtensionHostDestroyed(const extensions::ExtensionHost* host) override;
 
+  // The status of the extension's interaction for the page.
+  enum class PageInteractionStatus {
+    // The extension cannot run on the page and cannot be clicked on the page.
+    kNone,
+    // The extension tried to inject on the page, but is pending user approval.
+    kPending,
+    // The extension has permission to run on the page, or is clickable on the
+    // page and has no pending injections.
+    kActive,
+  };
+
+  // Returns the PageInteractionStatus for the current page.
+  PageInteractionStatus GetPageInteractionStatus(
+      content::WebContents* web_contents);
+
   // Checks if the associated |extension| is still valid by checking its
   // status in the registry. Since the OnExtensionUnloaded() notifications are
   // not in a deterministic order, it's possible that the view tries to refresh
